# llama.cpp

./: CMakeLists.txt
.github/workflows/: rpc-rdma.yml
ggml/: CMakeLists.txt
ggml/include/: ggml-backend.h  ggml-rpc.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-impl.h
ggml/src/ggml-cuda/: CMakeLists.txt
ggml/src/ggml-rpc/: CMakeLists.txt  ggml-rpc.cpp  rpc-transport.cpp  rpc-transport.h  test-rpc-compression.cpp  test-rpc-concurrency.cpp  test-rpc-config.cpp  test-rpc-transport.cpp
src/: llama-context.cpp  llama-model-loader.cpp  llama-model.cpp  llama.cpp
tools/rpc/: README.md  rpc-server.cpp
